center a text in button

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
      
 <div class="button_container">
   <div class="button">
-    Continue
+    <div class="buttontext">Continue</div> 
   </div>
 </div>
     
